tests/baselines/reference/parserVariableDeclaration8.errors.txt
==== tests/cases/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration8.ts (1 errors) ====
    var ;
    ~~~~~
!!! error TS1123: Variable declaration list cannot be empty.